css/pricing.css
.pricing-matrix {
	margin: 50px 20px;
}

.pricing-plan {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin: 40px 20px;
}

.pricing-plan h2 {
	background-color: #e05200;
	color: white;
	padding: 10px 10px 10px 20px;
	font-size: 24px;
}

.feature-list {
	padding: 10px 40px 20px 60px;
}

.highlight h2 {
	background-color: #e02800;
}

@media only screen and (min-width: 701px) and (max-width: 1439px) {
	
	.pricing-matrix {
		display: flex;
		justify-content: center;
		flex-wrap: wrap;
	}
}

/* Weird block to make footer work */
@media only screen and (min-width: 1351px) {
	
	.absolute {
		position: absolute;
		bottom: 0;
	}
}

@media only screen and (min-width: 1440px) {
	
	.pricing-matrix {
		display: flex;
		justify-content: center;
	}
}

